
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_6__ {int file; } ;
struct TYPE_4__ {int nr; struct object_array_entry* objects; } ;
struct rev_info {int max_parents; TYPE_3__ diffopt; TYPE_1__ pending; } ;
struct patch_ids {int dummy; } ;
struct option {int dummy; } ;
struct object_array_entry {TYPE_2__* item; } ;
struct commit_list {struct commit_list* next; struct commit* item; } ;
struct commit {int dummy; } ;
struct branch {int dummy; } ;
struct TYPE_5__ {int oid; } ;


 int N_ (char*) ;
 struct option OPT_END () ;
 struct option OPT__ABBREV (int*) ;
 struct option OPT__VERBOSE (int*,int ) ;
 int UNINTERESTING ;
 char* _ (char*) ;
 scalar_t__ add_pending_commit (char const*,struct rev_info*,int ) ;
 struct branch* branch_get (int *) ;
 char* branch_get_upstream (struct branch*,int *) ;
 int cherry_usage ;
 int commit_list_insert (struct commit*,struct commit_list**) ;
 int die (char*,...) ;
 int fprintf (int ,char*) ;
 int free_patch_ids (struct patch_ids*) ;
 int get_patch_ids (struct rev_info*,struct patch_ids*) ;
 struct commit* get_revision (struct rev_info*) ;
 scalar_t__ has_commit_patch_id (struct commit*,struct patch_ids*) ;
 scalar_t__ oideq (int *,int *) ;
 int parse_options (int,char const**,char const*,struct option*,int ,int ) ;
 scalar_t__ prepare_revision_walk (struct rev_info*) ;
 int print_commit (char,struct commit*,int,int,int ) ;
 int repo_init_revisions (int ,struct rev_info*,char const*) ;
 int stderr ;
 int the_repository ;
 int usage_with_options (int ,struct option*) ;

int cmd_cherry(int argc, const char **argv, const char *prefix)
{
 struct rev_info revs;
 struct patch_ids ids;
 struct commit *commit;
 struct commit_list *list = ((void*)0);
 struct branch *current_branch;
 const char *upstream;
 const char *head = "HEAD";
 const char *limit = ((void*)0);
 int verbose = 0, abbrev = 0;

 struct option options[] = {
  OPT__ABBREV(&abbrev),
  OPT__VERBOSE(&verbose, N_("be verbose")),
  OPT_END()
 };

 argc = parse_options(argc, argv, prefix, options, cherry_usage, 0);

 switch (argc) {
 case 3:
  limit = argv[2];

 case 2:
  head = argv[1];

 case 1:
  upstream = argv[0];
  break;
 default:
  current_branch = branch_get(((void*)0));
  upstream = branch_get_upstream(current_branch, ((void*)0));
  if (!upstream) {
   fprintf(stderr, _("Could not find a tracked"
     " remote branch, please"
     " specify <upstream> manually.\n"));
   usage_with_options(cherry_usage, options);
  }
 }

 repo_init_revisions(the_repository, &revs, prefix);
 revs.max_parents = 1;

 if (add_pending_commit(head, &revs, 0))
  die(_("unknown commit %s"), head);
 if (add_pending_commit(upstream, &revs, UNINTERESTING))
  die(_("unknown commit %s"), upstream);


 if (revs.pending.nr == 2) {
  struct object_array_entry *o = revs.pending.objects;
  if (oideq(&o[0].item->oid, &o[1].item->oid))
   return 0;
 }

 get_patch_ids(&revs, &ids);

 if (limit && add_pending_commit(limit, &revs, UNINTERESTING))
  die(_("unknown commit %s"), limit);


 if (prepare_revision_walk(&revs))
  die(_("revision walk setup failed"));
 while ((commit = get_revision(&revs)) != ((void*)0)) {
  commit_list_insert(commit, &list);
 }

 while (list) {
  char sign = '+';

  commit = list->item;
  if (has_commit_patch_id(commit, &ids))
   sign = '-';
  print_commit(sign, commit, verbose, abbrev, revs.diffopt.file);
  list = list->next;
 }

 free_patch_ids(&ids);
 return 0;
}
